# Bases-de-la-Programacion-en-C

./: CMakeLists.txt  README.md  main.cpp
Ejercicio 1/: Perfil.h  main.cpp
Ejercicio 7/: funcion.cpp  main.cpp
Ejercicio1/: Perfil.cpp
Ejercicio2/: main.cpp
Ejercicio3/: Bucles.cpp  Bucles.h  main.cpp
Ejercicio4/: Arrays.cpp  Arrays.h  main.cpp
Ejercicio5/: Funciones.cpp  Funciones.h  main.cpp
Ejercicio6/: main.cpp  punteros.cpp  punteros.h
Ejercicio7/: ejreferencias.cpp  ejreferencias.h  funcion.h
Ejercicio8/: constantes.cpp  constantes.h  main.cpp
Operadores/: instrucciones-prueba.cpp  instrucciones-prueba.h
