cmake_minimum_required(VERSION 3.29)

project(Bases-de-la-programacion-en-C)

set(CMAKE_CXX_STANDARD 20)

add_executable(Basesdelaprogramacion1
        "Ejercicio 1/Perfil.cpp"
        "Ejercicio 1/Perfil.h"
        "Ejercicio 1/main.cpp"

)

add_executable(Basesdelaprogramacion7
        "Ejercicio 7/main.cpp"
        "Ejercicio 7/funcion.cpp"
        "Ejercicio 7/funcion.h"

)