cmake_minimum_required(VERSION 3.29)

project(Bases-de-la-programacion-en-C)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ejercicio1
        Ejercicio1/main.cpp
        Ejercicio1/Perfil.cpp

)
add_executable(Ejercicio2
        Ejercicio2/main.cpp
        Ejercicio2/instrucciones-prueba.cpp

)
add_executable(Ejercicio3
        Ejercicio3/main.cpp
        Ejercicio3/Bucles.cpp

)
add_executable(Ejercicio4
        Ejercicio4/main.cpp
        Ejercicio4/Arrays.cpp

)
add_executable(Ejercicio5
        Ejercicio5/main.cpp
        Ejercicio5/Funciones.cpp

)
add_executable(Ejercicio6
        Ejercicio6/main.cpp
        Ejercicio6/punteros.cpp

)
add_executable(Ejercicio7
        Ejercicio7/main.cpp
        Ejercicio7/funcion.cpp

)
add_executable(Ejercicio8
        Ejercicio8/main.cpp
        Ejercicio8/constantes.cpp
)
